[gd_scene load_steps=3 format=3 uid="uid://bav5iqbmxkgk7"]

[ext_resource type="Script" path="res://scenes/ui/DebugOverlay.gd" id="1_7y8xh"]

[sub_resource type="Theme" id="Theme_1p8qy"]

[node name="DebugOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = SubResource("Theme_1p8qy")
script = ExtResource("1_7y8xh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = -10.0
modulate = Color(1, 1, 1, 0.8)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Debug Info"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="FPSLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "FPS: 60"

[node name="MemoryLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Memory: 0 MB"

[node name="SessionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Session: None"

[node name="EventsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Events: 0"

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DebugStatusLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Debug Status:"

[node name="CollisionLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Collisions: OFF"

[node name="NavigationLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Navigation: OFF"

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ShortcutsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "F1: Overlay | F2: Collision
F3: Navigation | F5: Export"
autowrap_mode = 2
